--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -5,10 +5,10 @@ server:
 spring:
   datasource:
 
-        url: jdbc:log4jdbc:mysql://localhost:3306/rrp?useUnicode=true&characterEncoding=utf-8&useSSL=true&serverTimezone=Asia/Shanghai
+        url: jdbc:log4jdbc:mysql://49.234.112.12:3306/robot?useUnicode=true&characterEncoding=utf-8&useSSL=true&serverTimezone=Asia/Shanghai
         driver-class-name: net.sf.log4jdbc.DriverSpy
         username: root
-        password: root
+        password: 122316
 
 
 
