--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -40,7 +40,7 @@ spring:
 #    properties:
 #      hibernate:
 #        enable_lazy_load_no_trans : true
-#        dialect: com.example.common.config.Utf8
+#        dialect: com.rrpserivce.common.config.Utf8
 
 
 
@@ -51,7 +51,7 @@ spring:
 #  properties:
 #    hibernate:
 #      enable_lazy_load_no_trans : true
-#      dialect: com.example.common.config.Utf8
+#      dialect: com.rrpserivce.common.config.Utf8
   #  security:
   #    enabled: true
   #    path: /swagger-ui.html
